Fixed duplicate align

--- a/hoverDot.css
+++ b/hoverDot.css
@@ -8,7 +8,4 @@ canvas.hoverDotTooltip {
     position:absolute;
     width: 240px;
     height: 30px;
-
-    left:-200px;
-    top:100px;
 }
